# third_party_lzma

./: BUILD.gn  OAT.xml  README.OpenSource  README.en.md  README.md  README_zh.md  add-linux-makefile-for-Format7zR.patch  bundle.json  liblzma.map  lzma.gni
C/: 7zCrc.c  Aes.c  AesOpt.c  Sha256.c  Sha256Opt.c
C/Util/7z/: 7zMain.c
patches/: patches.json
